syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "api/pb/ping;ping";

service PingService {
  rpc Ping(google.protobuf.Empty) returns (PingResponse);
}

message PingResponse {
  bool run = 1;
}