syntax = "proto3";

option go_package = "internal/pb/chat;chat";

service ChatService {
  rpc SendMessage (ChatMessage) returns (Empty);
  rpc ChatStream (Empty) returns (stream ChatMessage);
}

message ChatMessage {
  string user = 1;
  string text = 2;
}

message Empty {}